force-app/main/default/objects/cpm__Audit_Trail__c/fields/cpm__Action__c.field-meta.xml
<CustomField>
    <fullName>cpm__Action__c</fullName>
    <description>A description of the action that has been taken.</description>
    <inlineHelpText>The action that has been taken by the User.</inlineHelpText>
    <label>Action</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>