force-app/main/default/objects/cpm__Audit_Trail__c/fields/cpm__Type__c.field-meta.xml
<CustomField>
    <fullName>cpm__Type__c</fullName>
    <description>The Type of audit trail.</description>
    <label>Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>