force-app/main/default/objects/cpm__Audit_Trail__c/fields/cpm__User__c.field-meta.xml
<CustomField>
    <fullName>cpm__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user that has performed the action that cuased a record in audit trail.</description>
    <inlineHelpText>The user that has performed the action that cuased this audit trail record.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Audit_Trails</relationshipName>
    <type>Lookup</type>
</CustomField>