force-app/main/default/objects/cpm__Audit_Trail__c/listViews/cpm__All.listView-meta.xml
<ListView>
    <fullName>cpm__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>